# memes-remote

./: .env  .env.prod  .pdm-python  README.md  dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
memes_remote/: hook.py
memes_remote.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
